--- a/horseORhuman/model.ipynb
+++ b/horseORhuman/model.ipynb
@@ -215,7 +215,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class myCallback(tf.keras.callbacks.Callback):\n",
+    "    def on_epoch_end(self,epoch,logs={}):\n",
+    "        if(logs['accuracy']>0.65):\n",
+    "            print()\n",
+    "            print(\"stopping training because accuracy is grater than 0.85\")\n",
+    "            self.model.stop_training = True\n",
+    "\n",
+    "callbacks = myCallback()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +278,7 @@
        "{'horses': 0, 'humans': 1}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -281,45 +297,10 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "8/8 [==============================] - 80s 8s/step - loss: 0.7796 - accuracy: 0.5695\n",
+      "8/8 [==============================] - 75s 9s/step - loss: 0.9735 - accuracy: 0.5284\n",
       "Epoch 2/20\n",
-      "8/8 [==============================] - 131s 15s/step - loss: 0.8323 - accuracy: 0.7753\n",
-      "Epoch 3/20\n",
-      "8/8 [==============================] - 100s 12s/step - loss: 1.3981 - accuracy: 0.7898\n",
-      "Epoch 4/20\n",
-      "8/8 [==============================] - 80s 11s/step - loss: 0.2077 - accuracy: 0.9210\n",
-      "Epoch 5/20\n",
-      "8/8 [==============================] - 84s 11s/step - loss: 0.2363 - accuracy: 0.9102\n",
-      "Epoch 6/20\n",
-      "8/8 [==============================] - 67s 8s/step - loss: 0.1044 - accuracy: 0.9644\n",
-      "Epoch 7/20\n",
-      "8/8 [==============================] - 76s 11s/step - loss: 0.4971 - accuracy: 0.8120\n",
-      "Epoch 8/20\n",
-      "8/8 [==============================] - 80s 9s/step - loss: 0.2583 - accuracy: 0.8954\n",
-      "Epoch 9/20\n",
-      "8/8 [==============================] - 83s 10s/step - loss: 0.1169 - accuracy: 0.9655\n",
-      "Epoch 10/20\n",
-      "8/8 [==============================] - 91s 11s/step - loss: 0.0545 - accuracy: 0.9814\n",
-      "Epoch 11/20\n",
-      "8/8 [==============================] - 79s 10s/step - loss: 0.0196 - accuracy: 0.9956\n",
-      "Epoch 12/20\n",
-      "8/8 [==============================] - 87s 11s/step - loss: 0.6356 - accuracy: 0.8932\n",
-      "Epoch 13/20\n",
-      "8/8 [==============================] - 73s 9s/step - loss: 0.2592 - accuracy: 0.9310\n",
-      "Epoch 14/20\n",
-      "8/8 [==============================] - 70s 9s/step - loss: 0.0277 - accuracy: 0.9978\n",
-      "Epoch 15/20\n",
-      "8/8 [==============================] - 68s 8s/step - loss: 0.0117 - accuracy: 0.9967\n",
-      "Epoch 16/20\n",
-      "8/8 [==============================] - 71s 9s/step - loss: 0.0032 - accuracy: 1.0000\n",
-      "Epoch 17/20\n",
-      "8/8 [==============================] - 71s 9s/step - loss: 0.0083 - accuracy: 0.9967\n",
-      "Epoch 18/20\n",
-      "8/8 [==============================] - 71s 9s/step - loss: 0.7841 - accuracy: 0.8621\n",
-      "Epoch 19/20\n",
-      "8/8 [==============================] - 73s 9s/step - loss: 0.0531 - accuracy: 0.9878\n",
-      "Epoch 20/20\n",
-      "8/8 [==============================] - 86s 11s/step - loss: 0.0423 - accuracy: 0.9867\n"
+      "8/8 [==============================] - ETA: 0s - loss: 0.7800 - accuracy: 0.6826stopping training because accuracy is grater than 0.85\n",
+      "8/8 [==============================] - 74s 9s/step - loss: 0.7800 - accuracy: 0.6826\n"
      ]
     }
    ],
@@ -328,6 +309,7 @@
     "      train_generator,\n",
     "      steps_per_epoch=8,  \n",
     "      epochs=20,\n",
+    "      callbacks=[callbacks],\n",
     "      verbose=1)"
    ]
   },
