retrained with callback

--- a/horseORhuman/model.ipynb
+++ b/horseORhuman/model.ipynb
@@ -229,13 +229,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "class myCallback(tf.keras.callbacks.Callback):\n",
     "    def on_epoch_end(self,epoch,logs={}):\n",
-    "        if(logs['accuracy']>0.65):\n",
+    "        if(logs['accuracy']>0.98):\n",
     "            print()\n",
     "            print(\"stopping training because accuracy is grater than 0.85\")\n",
     "            self.model.stop_training = True\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "{'horses': 0, 'humans': 1}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -322,13 +322,19 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "8/8 [==============================] - 90s 11s/step - loss: 1.2668 - accuracy: 0.6218 - val_loss: 0.9094 - val_accuracy: 0.5000\n",
+      "8/8 [==============================] - 82s 11s/step - loss: 3.0173 - accuracy: 0.8076 - val_loss: 0.3894 - val_accuracy: 0.8594\n",
       "Epoch 2/20\n",
-      "8/8 [==============================] - 74s 9s/step - loss: 1.4102 - accuracy: 0.6151 - val_loss: 0.7328 - val_accuracy: 0.5156\n",
+      "8/8 [==============================] - 73s 9s/step - loss: 0.3971 - accuracy: 0.8443 - val_loss: 0.8825 - val_accuracy: 0.8516\n",
       "Epoch 3/20\n",
-      "8/8 [==============================] - ETA: 0s - loss: 0.6829 - accuracy: 0.7430\n",
+      "8/8 [==============================] - 80s 10s/step - loss: 0.1971 - accuracy: 0.9248 - val_loss: 1.1426 - val_accuracy: 0.8477\n",
+      "Epoch 4/20\n",
+      "8/8 [==============================] - 81s 10s/step - loss: 0.1722 - accuracy: 0.9424 - val_loss: 1.2073 - val_accuracy: 0.8320\n",
+      "Epoch 5/20\n",
+      "8/8 [==============================] - 74s 9s/step - loss: 0.1049 - accuracy: 0.9588 - val_loss: 1.1331 - val_accuracy: 0.8398\n",
+      "Epoch 6/20\n",
+      "8/8 [==============================] - ETA: 0s - loss: 0.0369 - accuracy: 0.9855\n",
       "stopping training because accuracy is grater than 0.85\n",
-      "8/8 [==============================] - 74s 9s/step - loss: 0.6829 - accuracy: 0.7430 - val_loss: 0.3698 - val_accuracy: 0.8789\n"
+      "8/8 [==============================] - 72s 9s/step - loss: 0.0369 - accuracy: 0.9855 - val_loss: 1.6353 - val_accuracy: 0.8281\n"
      ]
     }
    ],
@@ -344,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -459,13 +465,6 @@
    "source": [
     "predict_pic(1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
